# py4DSTEM-napari

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.napari-hub/: DESCRIPTION.md
src/napari_py4dstem/: __init__.py  _reader.py  _widget.py  napari.yaml
src/napari_py4dstem/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
